--- a/keyterms/static/css/popover.css
+++ b/keyterms/static/css/popover.css
@@ -26,6 +26,12 @@
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 0.3rem;
+
+    will-change: transform;
+    /* position: absolute;*/
+    /* transform: translate3d(303px, 302px, 0px); */
+    top: 0px;
+    left: 0px;
   }
   
   .popover ul {
@@ -170,7 +176,8 @@
   .popover-body {
     padding: 0.5rem 0.75rem;
     color: #212529;
-    max-height: 450px;
+    /* max-height: auto; /* 450px */ 
+    /* max-height: 500px; */
     overflow-y: auto;
     white-space:pre-wrap;
   }
