--- a/keyterms/static/css/keyterms.css
+++ b/keyterms/static/css/keyterms.css
@@ -9,9 +9,9 @@ h2 {
     font-weight: bold;
 }
 
-p#glossarymsg {
+p.glossarymsg {
     border-left: 5px solid #74c4e1 !important;
-    padding: 20px !important; 
+    padding: 20px !important;
     margin-bottom: 10px !important;
     margin-top: 10px !important;
     background-color: #eef2f4 !important;
@@ -25,7 +25,9 @@ p#glossarymsg {
     margin-bottom: 0 !important;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -50,6 +52,18 @@ p#glossarymsg {
     opacity: 0;
 }
 
+.keyterm-title {
+    white-space: nowrap;
+    overflow: hidden;
+    color: #0074B5;
+    margin-right: 40px;
+    text-overflow: ellipsis;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 800;
+}
+
+
 /* .allKeytermsList {
     columns: 2;
     -webkit-columns: 2;
@@ -62,12 +76,12 @@ p#glossarymsg {
     padding: 0.25rem 0.25rem !important;
 }
 
-.card-header .collapsed {
-    background-color: #ccc !important;
+.card:nth-child(odd) {
+    background-color: #d4d4d4 !important;
 }
 
-.card-header:not(.collapsed) {
-    background-color: #d4d4d4 !important;
+.card:nth-child(even) {
+    background-color: white !important;
 }
 
 .card-header .fa {
@@ -89,7 +103,7 @@ p#glossarymsg {
     list-style-type: disc !important;
 }
 
-.btn {
+.save-btn {
     background-color: #4CAF50;
     border: none;
     color: white;
@@ -101,8 +115,8 @@ p#glossarymsg {
     padding: 5px;
     display: inline-block;
     border-radius: 10px;
-    min-width: 100%;
-    /*max-width: 46%;*/
+    /*min-width: 100%;*/
+    max-width: 46%;
     vertical-align: top;
     font-size: 15px;
 }
@@ -136,7 +150,7 @@ p#glossarymsg {
     margin-right: 0px !important;
 }
 
-.row > * {
+.row>* {
     /* The border is just to visualize columns during layout. Remove in finished site. */
     /*border: 1px solid #BBBBBB;*/
     padding: 15px;
@@ -195,6 +209,7 @@ p#glossarymsg {
     background-color: grey;
 }
 
+
 /* other helper classes */
 
 .right {
@@ -245,11 +260,11 @@ p#glossarymsg {
 .modal-content {
     padding: 10px !important;
 }
-/* media queries */ 
 
-@media screen and (max-width: 600px)
-{
 
+/* media queries */
+
+@media screen and (max-width: 600px) {
     .one-sixth,
     .one-fifth,
     .one-fourth,
@@ -263,29 +278,27 @@ p#glossarymsg {
     .full {
         padding: 10px;
         width: 100%;
-    } 
-
+    }
     .hide-mobile {
         display: none;
     }
-    
     .static-mobile {
         position: static;
     }
 }
 
-@media (min-width: 601px)
-{
+@media (min-width: 601px) {
     .hide-desktop {
         display: none;
     }
-    
     .static-desktop {
         position: static;
     }
 }
 
+
 /* Defaults for lesson summary */
+
 .lessonsummary li {
     display: list-item !important;
 }
