--- a/keyterms/static/css/keyterms.css
+++ b/keyterms/static/css/keyterms.css
@@ -81,7 +81,7 @@ p.glossarymsg {
 }
 
 .card:nth-child(even) {
-    background-color: #d4d4d4 !important;
+    background-color: #ffffff !important;
 }
 
 .card-header .fa {
